--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
     "@mui/styled-engine-sc": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color-convert": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
@@ -40,6 +41,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "reflect-metadata": "^0.1.13",
     "serve": "^11.3.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
@@ -52,6 +54,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "preserve": "yarn build",
     "serve": "serve build/"
   },
   "eslintConfig": {
