chore: first commit

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
-    "name": "cra-template-space-ts",
-    "version": "0.2.0"
+  "name": "cra-template-spacedev-typescript",
+  "version": "0.3.0"
 }
