--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
   "name": "cra-template-spacedev-typescript",
-  "version": "0.3.0"
+  "version": "0.3.0",
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
+  },
+  "dependencies": {
+    "@types/node": "^18.8.4",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
+  }
 }
