--- a/template/package.json
+++ b/template/package.json
@@ -14,22 +14,34 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
+    "react-app-rewired": "^2.2.1",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@ethersproject/providers": "^5.7.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.4",
     "@mui/styled-engine-sc": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.14",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color-convert": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "fast-safe-stringify": "^2.1.1",
     "formik": "^2.2.9",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -43,19 +55,19 @@
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "serve": "^11.3.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.0",
+    "web3modal": "^1.9.9",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "prebuild": "rimraf build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preserve": "yarn build",
-    "serve": "serve build/"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
