--- a/template/package.json
+++ b/template/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "react-app-rewired": "^2.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,10 +15,12 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
-    "react-app-rewired": "^2.2.1",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "@types/node": "^18.8.4",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@ethersproject/providers": "^5.7.1",
@@ -67,7 +70,9 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "preserve": "yarn build",
+    "serve": "serve build/"
   },
   "eslintConfig": {
     "extends": [
