--- a/template/package.json
+++ b/template/package.json
@@ -22,11 +22,13 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.4",
     "@mui/styled-engine-sc": "^5.10.3",
+    "@mui/x-date-pickers": "^5.0.4",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color-convert": "^2.0.1",
+    "date-fns": "^2.29.3",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "fast-safe-stringify": "^2.1.1",
     "formik": "^2.2.9",
