--- a/template/package.json
+++ b/template/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,11 +14,11 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
+    "react-app-rewired": "^2.2.1",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
-    "ethers": "^5.7.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@ethersproject/providers": "^5.7.1",
@@ -39,8 +38,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color-convert": "^2.0.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.29.3",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "ethers": "^5.7.1",
     "fast-safe-stringify": "^2.1.1",
     "formik": "^2.2.9",
     "https-browserify": "^1.0.0",
@@ -64,6 +65,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "url": "^0.11.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "web3modal": "^1.9.9",
     "yup": "^0.32.11"
