--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "cra-template-spacedev-typescript",
-  "version": "0.3.0"
+  "version": "0.4.0",
+  "scripts": {
+    "start": "cd ./template && yarn start"
+  }
 }
